feat udistrital/autenticacion_mid#62: Firma Reducida
- Se crea nueva tabla para almacenar la firma encriptada y la información relacionada.
